--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ h1 {
     font-size: 300% !important;
     color: #e6eff3 !important;
     text-align: center;
-    margin-top: 50px !important;
+    margin-top: 100px !important;
     margin-bottom: 20px !important;
 }
 
@@ -232,6 +232,7 @@ footer {
 
 p {
     font-family: 'Alexandria', sans-serif;
+    font-weight: 300 !important;
     text-align: center;
     color: #e6eff3;
     margin-bottom: 0 !important;
