--- a/style.css
+++ b/style.css
@@ -171,6 +171,10 @@ hr {
     border-radius: 25px;
 }
 
+.moderation-showcase li, .music-showcase li, .config-showcase li, .music-showcase li {
+    font-weight: 400 !important;
+}
+
 .moderation-showcase {
     background-image: linear-gradient(135deg,rgba(191, 48, 48, 1) 0%, rgba(214, 162, 17, 1) 47%, rgba(32, 148, 171, 1) 100%);
 }
@@ -243,9 +247,13 @@ hr {
     opacity: 0.6;
 }
 
-.changelog-showcase, .command-info {
+.changelog-showcase, .command-info, .info-showcase {
     background-color: #202020;
     border: 2px solid #181818;
+}
+
+.info-showcase p {
+    text-align: center;
 }
 
 h1 {
@@ -369,14 +377,14 @@ footer .text-center {
 }
 
 li {
-    font-weight: 400 !important;
+    font-weight: 300 !important;
     text-align: left !important;
 }
 
 p {
     font-family: 'Alexandria', sans-serif;
     font-weight: 300 !important;
-    text-align: center;
+    text-align: left;
     color: #e6eff3;
     margin-bottom: 0 !important;
 }
@@ -388,6 +396,7 @@ p.param {
 }
 
 p.date {
+    text-align: center;
     margin-bottom: 10px !important;
 }
 
@@ -420,6 +429,10 @@ code {
 
 code.optional {
     color: #b4b4b4 !important;
+}
+
+.command-info p {
+    text-align: center;
 }
 
 .command-info ul {
